--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "uniqid": "^5.4.0"
   },
   "type": "module",
   "devDependencies": {
