--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
+    "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
+    "lint": "^0.7.0",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
+    "react-query": "^3.39.1",
+    "react-redux": "^8.0.2",
     "redux-logger": "^3.0.6",
-    "tailwindcss": "3.3.2"
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "use-sound": "^4.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
+    "autoprefixer": "^10.4.7",
+    "cypress": "^10.11.0",
+    "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.0.24"
   }
 }
