--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "react-icons": "^4.4.0",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.11.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "uniqid": "^5.4.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
