--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.14.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
