--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
+    "puppeteer": "^20.2.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
