--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "puppeteer": "^20.3.0",
+    "socket.io": "^4.6.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
