--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.0.1",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
@@ -39,6 +40,7 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.14.0",
+    "prisma-dbml-generator": "^0.10.0",
     "supertest": "^6.3.3"
   },
   "type": "module"
