--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "csv-writer": "^1.6.0",
     "lint": "^0.7.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
