--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.1",
+    "reaviz": "^14.7.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "socket.io": "^4.6.1",
