--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "puppeteer": "^20.3.0",
+    "reaviz": "^14.7.4",
     "socket.io": "^4.6.1",
     "uniqid": "^5.4.0"
   },
