--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --collect-coverage",
+    "test": "jest --watch --coverage",
     "front": "cd ../client && npm run dev",
     "back": "nodemon index.js",
     "dev": "concurrently \"npm run front\" \"npm run back\""
